Revert to Java 23 in pom.xml and update all code to use Java 23 syntax features
Co-authored-by: commjoen <1457214+commjoen@users.noreply.github.com>